--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=UnrealHagiProjekt
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Parkinglot.Parkinglot
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Levels/Parkinglot.Parkinglot
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
