--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6A80BF1B4C6C894A3F6EA19390CCE7A9
-ProjectName=Third Person BP Game Template
+ProjectName=Ikea
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
